fix layout bugs footer subpages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,16 +557,18 @@ textarea:focus {
     margin-top: 60px;
 }
 
-/*-----------------------------------------------------------404 */
+/*-----------------------------------------------------------404 & Thankyou*/
 
 .subpage-container {
     position: fixed;
     height: 100%;
+    max-width: 1300px;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 0 20px;
 }
+
 
 .subpage-container p a {
     color: #ffffff;
@@ -590,6 +592,14 @@ footer {
 
 .footer-padding-small {
     height: 140px;
+}
+
+.subpage-footer {
+    position: fixed;
+    width: 100%;
+    max-width: 1300px;
+    bottom: 0;
+    margin: 0 auto;
 }
 
 .footer-circle-wrapper {
@@ -817,6 +827,14 @@ footer {
 @media (max-height: 400px) {
     .hero-text-sm {
         bottom: 0px;
+    }
+
+    .subpage-footer {
+        display: none;
+    }
+
+    .subpage-container {
+        padding-top: 70px;
     }
 }
 
